--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -5,7 +5,7 @@
 /**************** common css start ****************/
 @font-face {
   font-family: Caveat;
-  src: url(/fonts/Fz-Caveat-Regular.ttf);
+  src: url(../fonts/Fz-Caveat-Regular.ttf);
 }
 body {
   font-family: "Be Vietnam Pro", sans-serif;
@@ -339,22 +339,26 @@ ul {
   box-shadow: none;
 }
 
-.pageination .page-link {
+.pagination .page-link {
   border: 0px solid transparent;
   font-weight: 500;
   font-size: 18px;
   color: #979797;
   padding: 10px 8px;
+  cursor: pointer;
+  user-select: none;
 }
-.pageination .page-link:hover {
+.pagination .page-link:hover {
   background-color: transparent;
   color: #000;
 }
-.pageination .page-link.active {
+.pagination .page-item.active .page-link {
+  background-color: transparent;
   color: #000;
 }
-.pageination i {
-  font-size: 12px;
+.pagination i {
+  font-size: 14px;
+  font-weight: 900;
 }
 
 #toTop { /* Hidden by default */
@@ -393,7 +397,7 @@ ul {
 @media (max-width: 576px) {
   .custom_btn {
     font-size: 14px;
-    padding: 15px 24px;
+    padding: 14px 20px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -3566,6 +3570,7 @@ h6 {
 body {
   display: flex;
   flex-direction: column;
+  user-select: none;
 }
 
 html, body {
@@ -4167,6 +4172,7 @@ html, body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: bottom;
 }
 .slider .list .item::after {
   content: "";
@@ -4306,6 +4312,237 @@ html, body {
   }
 }
 
+/**************** banner part css start ****************/
+.combo_part {
+  margin-top: 60px;
+  background-color: #fff;
+  position: relative;
+}
+.combo_part .single_combo_slider .s_product_img {
+  width: 100%;
+  height: 350px;
+  cursor: default;
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_img {
+    height: 200px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .combo_part .single_combo_slider .s_product_img {
+    height: 350px;
+  }
+}
+.combo_part .single_combo_slider .s_product_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: right;
+}
+.combo_part .single_combo_slider .s_product_text {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  margin: 0;
+  background: linear-gradient(0deg, #000000 0%, rgba(24, 25, 27, 0.8) 20%, rgba(29, 32, 39, 0) 100%);
+}
+.combo_part .single_combo_slider .s_product_text .product_combo {
+  position: absolute;
+  bottom: 0;
+  padding: 20px 20px;
+  max-width: 50%;
+}
+.combo_part .single_combo_slider .s_product_text .product_name {
+  font-size: 40px;
+  font-weight: 700;
+  margin: 0;
+  color: #fff;
+  text-wrap: wrap;
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_text .product_name {
+    font-size: 25px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .combo_part .single_combo_slider .s_product_text .product_name {
+    font-size: 40px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .combo_part .single_combo_slider .s_product_text .product_name {
+    font-size: 40px;
+  }
+}
+.combo_part .single_combo_slider .s_product_text .combo_price {
+  color: #fff;
+  font-size: 16px;
+  align-items: baseline;
+  gap: 15px;
+  margin-bottom: 10px;
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_text .combo_price {
+    flex-direction: column;
+    gap: 0;
+    margin-bottom: 0;
+  }
+}
+.combo_part .single_combo_slider .s_product_text .product_price {
+  font-size: 25px;
+  margin: 0;
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_text .product_price {
+    font-size: 20px;
+  }
+}
+.combo_part .single_combo_slider .s_product_text .manual_price {
+  text-decoration: line-through;
+  color: #747474;
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_text .manual_price {
+    font-size: 15px;
+  }
+}
+.combo_part .single_combo_slider .s_product_text .combo_card_area {
+  padding: 20px 10px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  max-width: 50%;
+}
+.combo_part .single_combo_slider .s_product_text .combo_card_area .product_count {
+  border: 2.2px solid #ddd;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  padding: 12px 15px;
+}
+.combo_part .single_combo_slider .s_product_text .combo_card_area .product_count input {
+  border: 0px solid transparent;
+  text-align: center;
+}
+.combo_part .single_combo_slider .s_product_text .combo_card_area .product_count .input-number {
+  color: white;
+  background-color: transparent;
+  display: inline-block;
+  width: 60px;
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_text .combo_card_area .product_count .input-number {
+    width: 60px;
+  }
+}
+.combo_part .single_combo_slider .s_product_text .combo_card_area .ti-minus, .combo_part .single_combo_slider .s_product_text .combo_card_area .ti-plus {
+  color: #fff;
+  padding: 5px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.combo_part .single_combo_slider .s_product_text .combo_card_area .ti-minus:hover, .combo_part .single_combo_slider .s_product_text .combo_card_area .ti-plus:hover {
+  color: #000;
+  background-color: #f3f3f3;
+}
+.combo_part .single_combo_slider .s_product_text .combo_card_area a {
+  padding: 12px 40px !important;
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .combo_part .single_combo_slider .s_product_text .combo_card_area a {
+    padding: 12px 25px !important;
+  }
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_text .combo_card_area a {
+    padding: 12px 10px !important;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .combo_part .single_combo_slider .s_product_text .combo_card_area {
+    flex-direction: column;
+  }
+  .combo_part .single_combo_slider .s_product_text .combo_card_area .product_count {
+    justify-content: space-between;
+  }
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_text .combo_card_area {
+    flex-direction: column;
+  }
+  .combo_part .single_combo_slider .s_product_text .combo_card_area .product_count {
+    justify-content: space-between;
+  }
+}
+.combo_part .owl-theme .owl-dots {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  padding: 10px 0;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .combo_part .owl-theme .owl-dots {
+    padding: 0 0 20px;
+  }
+}
+.combo_part .owl-theme .owl-dots .owl-dot span {
+  background: #747474 !important;
+}
+.combo_part .owl-theme .owl-dots .owl-dot.active span,
+.combo_part .owl-theme .owl-dots .owl-dot:hover span {
+  background: white !important;
+}
+.combo_part .owl-theme .owl-nav {
+  margin: 0;
+}
+.combo_part .owl-theme .owl-nav .owl-next,
+.combo_part .owl-theme .owl-nav .owl-prev {
+  position: absolute;
+  top: 40%;
+}
+@media (max-width: 991px) {
+  .combo_part .owl-theme .owl-nav .owl-next,
+  .combo_part .owl-theme .owl-nav .owl-prev {
+    display: none;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .combo_part .owl-theme .owl-nav .owl-next,
+  .combo_part .owl-theme .owl-nav .owl-prev {
+    display: none;
+  }
+}
+.combo_part .owl-theme .owl-nav .owl-next {
+  right: 20px;
+}
+.combo_part .owl-theme .owl-nav .owl-prev {
+  left: 20px;
+}
+.combo_part .owl-theme .owl-nav .owl-prev:hover,
+.combo_part .owl-theme .owl-nav .owl-next:hover {
+  background: none !important;
+}
+.combo_part .container {
+  padding: 20px 0;
+}
+.combo_part .products {
+  display: none; /* Initially hide all products sections */
+  justify-content: center;
+  margin: 0;
+}
+.combo_part .product_decription {
+  padding: 20px 20px 40px 20px;
+  text-align: center;
+  line-height: 25px;
+  font-size: 15px;
+}
+
+/**************** hero part css end ****************/
 .filter_area {
   background-color: #fff;
   padding-top: 10px;
