--- a/src/main/resources/templates/user/combo.html
+++ b/src/main/resources/templates/user/combo.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="/images/logo/favicon_black.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- plugin CSS -->
+    <link rel="stylesheet" href="/plugins/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="/plugins/owl.theme.default.min.css" type="text/css">
     <!-- icon CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="/css/themify-icons.css" type="text/css">
@@ -291,6 +294,63 @@
     </section>
     <!-- Combo part start-->
 
+    <!--::footer_part start::-->
+    <footer class="footer_part">
+        <div class="footlink_part">
+            <div class="container">
+                <div class="row justify-content-around">
+                    <div class="col-sm-6 col-lg-5">
+                        <nav class="navbar">
+                            <a class="nav-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-2">
+                        <div class="single_footer_part">
+                            <h4>Our Page</h4>
+                            <ul class="list-unstyled">
+                                <li><a href="/">Trang chủ</a></li>
+                                <li><a href="/category">Sản phẩm</a></li>
+                                <li><a href="/category">Combo</a></li>
+                                <li><a href="/contact">Liên hệ</a></li>
+                                
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-2">
+                        <div class="single_footer_part">
+                            <h4>Our Social</h4>
+                            <ul class="list-unstyled">
+                                <li><a target="_blank" href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
+                                <li><a target="_blank" href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="single_footer_part">
+                            <h4>Our Contact</h4>
+                            <ul class="list-unstyled">
+                                <li><a href="mailto:deprop.contact@gmail.com">deprop.contact@gmail.com</a></li>
+                                <li><a href="tel:0901131465">0901131465</a></li>
+                                <li><a>District 9, Ho Chi Minh city</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+        
+        <div class="copyright_part">
+            <div class="container">
+                <div class="copyright_text d-flex align-items-center justify-content-between">
+                    <span>
+                      <a>DeArt Corp</a>. All rights reserved.
+                    </span>
+                    <span>&copy;<script>document.write(new Date().getFullYear());</script></span>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--::footer_part end::-->
 
     <!-- quick_cart start -->
     <div class="quick_cart offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1" id="quickCart" aria-labelledby="quickCartLabel">
