--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -34,7 +34,7 @@ input:focus {
 .section_padding {
   padding-bottom: 140px;
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .section_padding {
     padding-bottom: 100px;
   }
@@ -58,7 +58,7 @@ input:focus {
 .single_padding_top {
   padding-top: 140px !important;
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .single_padding_top {
     padding-top: 70px !important;
   }
@@ -82,7 +82,7 @@ input:focus {
 .padding_top {
   padding-top: 140px;
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .padding_top {
     padding-top: 100px;
   }
@@ -192,7 +192,7 @@ button:focus,
     margin: 40px 0px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .section_tittle {
     margin: 40px 0px;
   }
@@ -226,7 +226,7 @@ button:focus,
     margin-bottom: 15px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .section_tittle h2 {
     font-size: 35px;
     line-height: 40px;
@@ -253,7 +253,7 @@ button:focus,
     margin-bottom: 10px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .section_tittle p {
     margin-bottom: 10px;
   }
@@ -292,7 +292,7 @@ ul {
     margin-top: 70px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .mt_130 {
     margin-top: 70px;
   }
@@ -306,7 +306,7 @@ ul {
     margin-bottom: 70px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .mb_130 {
     margin-bottom: 100px;
   }
@@ -393,6 +393,7 @@ ul {
   -o-transition: all 0.2s ease-in-out;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  z-index: 999;
 }
 @media (max-width: 576px) {
   .custom_btn {
@@ -406,7 +407,7 @@ ul {
     padding: 14px 20px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .custom_btn {
     padding: 14px 30px;
   }
@@ -761,7 +762,7 @@ ul {
     margin-left: 50px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .banner_part .single_banner_slider .banner_text .banner_text_iner {
     max-width: 400px;
     margin-left: 50px;
@@ -788,7 +789,7 @@ ul {
     line-height: 1.3;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .banner_part .single_banner_slider .banner_text h1 {
     font-size: 40px;
     margin-bottom: 15px;
@@ -819,7 +820,7 @@ ul {
     margin-bottom: 20px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .banner_part .single_banner_slider .banner_text p {
     padding-right: 0;
     margin-bottom: 20px;
@@ -871,7 +872,7 @@ ul {
     display: none;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .banner_part .owl-theme .owl-nav .owl-next,
   .banner_part .owl-theme .owl-nav .owl-prev {
     display: none;
@@ -946,7 +947,7 @@ ul {
     display: none;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .product_list .owl-theme .owl-nav {
     display: none;
   }
@@ -2234,7 +2235,7 @@ ul {
     padding: 9px 34px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .order_box .btn_3 {
     padding: 9px 34px;
   }
@@ -2387,7 +2388,7 @@ ul {
     height: 400px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .login_part .login_part_text, .login_part .login_part_form {
     padding: 20px;
     height: 400px;
@@ -2440,7 +2441,7 @@ ul {
     margin-bottom: 20px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .login_part .login_part_form h3 {
     margin-bottom: 20px;
   }
@@ -3640,7 +3641,7 @@ html, body {
     padding: 30px 0 50px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .feature_part .owl-theme .owl-dots {
     padding: 30px 0 50px;
   }
@@ -3664,7 +3665,7 @@ html, body {
     display: none;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .feature_part .owl-theme .owl-nav .owl-next, .feature_part .owl-theme .owl-nav .owl-prev {
     display: none;
   }
@@ -3846,7 +3847,7 @@ html, body {
     display: none;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .related_product .owl-theme .owl-nav {
     display: none;
   }
@@ -3866,7 +3867,7 @@ html, body {
 .product_image_area {
   background-color: #fff;
   padding-top: 10px;
-  padding-bottom: 200px;
+  padding-bottom: 40px;
 }
 
 .s_product_img {
@@ -3874,6 +3875,11 @@ html, body {
 }
 
 @media (max-width: 576px) {
+  .s_product_text {
+    margin-top: 30px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
   .s_product_text {
     margin-top: 30px;
   }
@@ -3979,7 +3985,7 @@ html, body {
 .s_product_text .card_area a {
   padding: 12px 40px !important;
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .s_product_text .card_area a {
     padding: 12px 25px !important;
   }
@@ -3997,51 +4003,52 @@ html, body {
     justify-content: space-between;
   }
 }
-.s_product_text .product_accordion {
+
+.product_accordion {
   margin-top: 30px;
   gap: 30px;
 }
-.s_product_text .product_accordion h5 {
+.product_accordion h5 {
   margin: 0;
 }
-.s_product_text .product_accordion i {
+.product_accordion i {
   color: #000;
 }
-.s_product_text .product_accordion p {
+.product_accordion p {
   font-size: 14px;
 }
-.s_product_text .product_accordion p strong {
+.product_accordion p strong {
   font-weight: bold;
 }
-.s_product_text .product_accordion p a {
+.product_accordion p a {
   color: #000;
   text-decoration: underline;
 }
-.s_product_text .product_accordion .offcanvas {
+.product_accordion .offcanvas {
   width: 500px;
 }
-.s_product_text .product_accordion .offcanvas-body {
+.product_accordion .offcanvas-body {
   background-color: white;
   color: #000;
 }
-.s_product_text .product_accordion .offcanvas-body .accordion-button {
+.product_accordion .accordion-button {
   padding: 10px 20px;
   font-size: 14px;
   line-height: 30px;
 }
-.s_product_text .product_accordion .offcanvas-body .accordion-button:focus {
+.product_accordion .accordion-button:focus {
   box-shadow: none;
 }
-.s_product_text .product_accordion .offcanvas-body .accordion-button:not(.collapsed) {
+.product_accordion .accordion-button:not(.collapsed) {
   background-color: #000;
   color: #fff;
   box-shadow: none;
 }
-.s_product_text .product_accordion .offcanvas-body .accordion-button:not(.collapsed)::after {
+.product_accordion .accordion-button:not(.collapsed)::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
-.s_product_text .product_accordion .offcanvas-body::-webkit-scrollbar {
-  width: 0px;
+.product_accordion .accordion-body {
+  background-color: #f5f5f5;
 }
 
 /***************** single product item css *******************/
@@ -4129,7 +4136,7 @@ html, body {
     font-size: 12px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .single_product_item .single_product_text a {
     font-size: 13px;
   }
@@ -4320,24 +4327,39 @@ html, body {
 }
 .combo_part .single_combo_slider .s_product_img {
   width: 100%;
-  height: 350px;
-  cursor: default;
-}
-@media (max-width: 576px) {
-  .combo_part .single_combo_slider .s_product_img {
-    height: 200px;
-  }
+  height: 500px;
+  cursor: grabbing;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .combo_part .single_combo_slider .s_product_img {
     height: 350px;
   }
 }
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .combo_part .single_combo_slider .s_product_img {
+    height: 350px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .combo_part .single_combo_slider .s_product_img {
+    height: 300px;
+  }
+}
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_img {
+    height: 200px;
+  }
+}
 .combo_part .single_combo_slider .s_product_img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: right;
+  object-position: center;
+}
+@media only screen and (min-width: 1440px) {
+  .combo_part .single_combo_slider .s_product_img img {
+    object-position: 0 -400px;
+  }
 }
 .combo_part .single_combo_slider .s_product_text {
   width: 100%;
@@ -4347,9 +4369,14 @@ html, body {
   margin: 0;
   background: linear-gradient(0deg, #000000 0%, rgba(24, 25, 27, 0.8) 20%, rgba(29, 32, 39, 0) 100%);
 }
+@media (max-width: 576px) {
+  .combo_part .single_combo_slider .s_product_text {
+    background: linear-gradient(0deg, #000000 0%, rgba(24, 25, 27, 0.8) 50%, rgba(29, 32, 39, 0) 100%);
+  }
+}
 .combo_part .single_combo_slider .s_product_text .product_combo {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   padding: 20px 20px;
   max-width: 50%;
 }
@@ -4370,7 +4397,7 @@ html, body {
     font-size: 40px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .combo_part .single_combo_slider .s_product_text .product_name {
     font-size: 40px;
   }
@@ -4400,7 +4427,7 @@ html, body {
 }
 .combo_part .single_combo_slider .s_product_text .manual_price {
   text-decoration: line-through;
-  color: #747474;
+  color: #ccc;
 }
 @media (max-width: 576px) {
   .combo_part .single_combo_slider .s_product_text .manual_price {
@@ -4410,7 +4437,7 @@ html, body {
 .combo_part .single_combo_slider .s_product_text .combo_card_area {
   padding: 20px 10px;
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   right: 0;
   max-width: 50%;
 }
@@ -4449,7 +4476,7 @@ html, body {
 .combo_part .single_combo_slider .s_product_text .combo_card_area a {
   padding: 12px 40px !important;
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .combo_part .single_combo_slider .s_product_text .combo_card_area a {
     padding: 12px 25px !important;
   }
@@ -4475,6 +4502,14 @@ html, body {
     justify-content: space-between;
   }
 }
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .combo_part .single_combo_slider .s_product_text .combo_card_area {
+    flex-direction: column;
+  }
+  .combo_part .single_combo_slider .s_product_text .combo_card_area .product_count {
+    justify-content: space-between;
+  }
+}
 .combo_part .owl-theme .owl-dots {
   position: absolute;
   margin-left: auto;
@@ -4483,11 +4518,12 @@ html, body {
   right: 0;
   bottom: 0;
   text-align: center;
-  padding: 10px 0;
+  line-height: 0;
+  padding-bottom: 10px;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .combo_part .owl-theme .owl-dots {
-    padding: 0 0 20px;
+    padding-bottom: 10px;
   }
 }
 .combo_part .owl-theme .owl-dots .owl-dot span {
@@ -4511,7 +4547,7 @@ html, body {
     display: none;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .combo_part .owl-theme .owl-nav .owl-next,
   .combo_part .owl-theme .owl-nav .owl-prev {
     display: none;
@@ -4529,6 +4565,31 @@ html, body {
 }
 .combo_part .container {
   padding: 20px 0;
+}
+@media only screen and (min-width: 1440px) {
+  .combo_part .container {
+    max-width: 1000px;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1439px) {
+  .combo_part .container {
+    max-width: 1000px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .combo_part .container {
+    max-width: 1000px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .combo_part .container {
+    max-width: 650px;
+  }
+}
+@media (max-width: 576px) {
+  .combo_part .container {
+    max-width: 400px;
+  }
 }
 .combo_part .products {
   display: none; /* Initially hide all products sections */
@@ -4707,7 +4768,7 @@ html, body {
     width: 130px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .cart_part .cart_item .product_text {
     width: 300px;
   }
@@ -4744,7 +4805,7 @@ html, body {
     width: 50px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .cart_part .cart_item .product_count .input-number {
     width: 60px;
   }
@@ -5073,7 +5134,7 @@ html, body {
     margin-bottom: 15px;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .footer_part .single_footer_part h4 {
     font-size: 19px;
   }
@@ -5392,7 +5453,7 @@ html, body {
     width: 70%;
   }
 }
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .successnoti_part .successnoti_area {
     width: 70%;
   }
