--- a/src/main/resources/templates/user/combo.html
+++ b/src/main/resources/templates/user/combo.html
@@ -101,7 +101,7 @@
                                 <div class="manual_price current_prefix">100</div>
                                 <div class="product_price current_prefix">70</div>
                             </div>
-                            <h3 class="product_name">Combo 1</h3>
+                            <h3 class="product_name">Combo Mùa Xuân</h3>
                         </div>
                         <div class="combo_card_area d-flex">
                             <div class="product_count">
@@ -124,7 +124,76 @@
                                 <div class="manual_price current_prefix">100</div>
                                 <div class="product_price current_prefix">50</div>
                             </div>
-                            <h3 class="product_name">Combo 2</h3>
+                            <h3 class="product_name">Combo Giáng Sinh</h3>
+                        </div>
+                        <div class="combo_card_area d-flex">
+                            <div class="product_count">
+                              <span class="number-decrement"><i class="ti-minus"></i></span>
+                              <input class="input-number product_quantity" type="text" value="1" min="1">
+                              <span class="number-increment"><i class="ti-plus"></i></span>
+                            </div>
+                            <button class="add_to_cart custom_btn btn_white">Thêm vào giỏ</button>
+                          </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Combo 3 -->
+            <div class="single_combo_slider" data-products="products3">
+                <div class="s_product_img">
+                    <img src="/images/combo/concept-3.jpg" alt="">
+                    <div class="s_product_text">
+                        <div class="product_combo">
+                            <div class="combo_price d-flex">
+                                <div class="manual_price current_prefix">100</div>
+                                <div class="product_price current_prefix">50</div>
+                            </div>
+                            <h3 class="product_name">Combo Mùa Hè</h3>
+                        </div>
+                        <div class="combo_card_area d-flex">
+                            <div class="product_count">
+                              <span class="number-decrement"><i class="ti-minus"></i></span>
+                              <input class="input-number product_quantity" type="text" value="1" min="1">
+                              <span class="number-increment"><i class="ti-plus"></i></span>
+                            </div>
+                            <button class="add_to_cart custom_btn btn_white">Thêm vào giỏ</button>
+                          </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Combo 4 -->
+            <div class="single_combo_slider" data-products="products4">
+                <div class="s_product_img">
+                    <img src="/images/combo/concept-4.jpg" alt="">
+                    <div class="s_product_text">
+                        <div class="product_combo">
+                            <div class="combo_price d-flex">
+                                <div class="manual_price current_prefix">100</div>
+                                <div class="product_price current_prefix">50</div>
+                            </div>
+                            <h3 class="product_name">Combo Đồng Quê</h3>
+                        </div>
+                        <div class="combo_card_area d-flex">
+                            <div class="product_count">
+                              <span class="number-decrement"><i class="ti-minus"></i></span>
+                              <input class="input-number product_quantity" type="text" value="1" min="1">
+                              <span class="number-increment"><i class="ti-plus"></i></span>
+                            </div>
+                            <button class="add_to_cart custom_btn btn_white">Thêm vào giỏ</button>
+                          </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Combo 5 -->
+            <div class="single_combo_slider" data-products="products5">
+                <div class="s_product_img">
+                    <img src="/images/combo/concept-5.jpg" alt="">
+                    <div class="s_product_text">
+                        <div class="product_combo">
+                            <div class="combo_price d-flex">
+                                <div class="manual_price current_prefix">100</div>
+                                <div class="product_price current_prefix">50</div>
+                            </div>
+                            <h3 class="product_name">Combo Vintage</h3>
                         </div>
                         <div class="combo_card_area d-flex">
                             <div class="product_count">
@@ -143,68 +212,7 @@
         <div class="container">
             <!-- Products for Combo 1 -->
             <div id="products1" class="products row align-items-center latest_product_inner">
-                <!-- Combo description -->
-                <p class="product_decription">
-                    Below are a series of poorly constructed paragraphs and possible solutions. Put yourself in the place of a teacher. Criticise the structure of each paragraph and suggest how it might be improved. 
-                </p>
                 <!-- Product template -->
-                <div class="product_item col-lg-3 col-sm-4 col-6">
-                    <div class="single_product_item">
-                        <a href="single-product.html">
-                            <img src="/images/product/item.jpg">
-                            <span class="product_tag">Nổi bật</span>
-                        </a>
-                        <div class="single_product_text">
-                            <h5 class="product_category">
-                                <a class="text-muted-1 category-link" href="#" data-category="furniture">Furniture</a>
-                            </h5>
-                            <h4 class="product_title">
-                                <a href="single-product.html">red modern</a>
-                            </h4>
-                            <div class="product_price current_prefix">
-                                1
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="product_item col-lg-3 col-sm-4 col-6">
-                    <div class="single_product_item">
-                        <a href="single-product.html">
-                            <img src="/images/product/item.jpg">
-                            <span class="product_tag">Nổi bật</span>
-                        </a>
-                        <div class="single_product_text">
-                            <h5 class="product_category">
-                                <a class="text-muted-1 category-link" href="#" data-category="furniture">Furniture</a>
-                            </h5>
-                            <h4 class="product_title">
-                                <a href="single-product.html">red modern</a>
-                            </h4>
-                            <div class="product_price current_prefix">
-                                1
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="product_item col-lg-3 col-sm-4 col-6">
-                    <div class="single_product_item">
-                        <a href="single-product.html">
-                            <img src="/images/product/item.jpg">
-                            <span class="product_tag">Nổi bật</span>
-                        </a>
-                        <div class="single_product_text">
-                            <h5 class="product_category">
-                                <a class="text-muted-1 category-link" href="#" data-category="furniture">Furniture</a>
-                            </h5>
-                            <h4 class="product_title">
-                                <a href="single-product.html">red modern</a>
-                            </h4>
-                            <div class="product_price current_prefix">
-                                1
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="product_item col-lg-3 col-sm-4 col-6">
                     <div class="single_product_item">
                         <a href="single-product.html">
@@ -227,10 +235,6 @@
             </div>
             <!-- Products for Combo 2 -->
             <div id="products2" class="products row align-items-center latest_product_inner">
-                <!-- Combo description -->
-                <p class="product_decription">
-                    bao gom abc
-                </p>
                 <!-- Product template -->
                 <div class="product_item col-lg-3 col-sm-4 col-6">
                     <div class="single_product_item">
@@ -251,6 +255,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <!-- Products for Combo 3 -->
+            <div id="products3" class="products row align-items-center latest_product_inner">
+                <!-- Product template -->
                 <div class="product_item col-lg-3 col-sm-4 col-6">
                     <div class="single_product_item">
                         <a href="single-product.html">
@@ -270,6 +278,33 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <!-- Products for Combo 4 -->
+            <div id="products4" class="products row align-items-center latest_product_inner">
+                <!-- Product template -->
+                <div class="product_item col-lg-3 col-sm-4 col-6">
+                    <div class="single_product_item">
+                        <a href="single-product.html">
+                            <img src="/images/product/item.jpg">
+                            <span class="product_tag">Nổi bật</span>
+                        </a>
+                        <div class="single_product_text">
+                            <h5 class="product_category">
+                                <a class="text-muted-1 category-link" href="#" data-category="furniture">Furniture</a>
+                            </h5>
+                            <h4 class="product_title">
+                                <a href="single-product.html">red modern</a>
+                            </h4>
+                            <div class="product_price current_prefix">
+                                1
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Products for Combo 5 -->
+            <div id="products5" class="products row align-items-center latest_product_inner">
+                <!-- Product template -->
                 <div class="product_item col-lg-3 col-sm-4 col-6">
                     <div class="single_product_item">
                         <a href="single-product.html">
@@ -378,22 +413,22 @@
         <i class="fas fa-chevron-up"></i>
     </button>
 
-   <!-- jquery plugins here-->
-   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/min/moment.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-   <!-- bootstrap js -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-   <!-- owl carousel plugin-->
-   <script src="/plugins/owl.carousel.min.js"></script>
-   <!-- main js -->
-   <script src="/js/jquery.js"></script>
-   <script src="/js/common.js"></script>
-   <script src="/js/addtocart.js"></script>
-   <script src="/js/combo.js"></script>
-   <!-- extra js --> 
-   <script src="/js/backtotop.js"></script>
-   <script src="/js/loading.js"></script>
+    <!-- jquery plugins here-->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/min/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- owl carousel plugin-->
+    <script src="/plugins/owl.carousel.min.js"></script>
+    <!-- main js -->
+    <script src="/js/combo1.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/common.js"></script>
+    <script src="/js/addtocart-combo.js"></script>
+    <!-- extra js --> 
+    <script src="/js/backtotop.js"></script>
+    <script src="/js/loading.js"></script>
 </body>
 
 </html>
