--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -142,13 +142,13 @@
                             </thead>
                             <tbody>
                                 <tr th:each="customerOrder : ${customerOrders}">
-                                    <td><input th:value="${customerOrder.orderId}" class="form-check-input" type="checkbox"></td>
+                                    <td><input th:value="${customerOrder.id}" class="form-check-input" name="checkbox" id="checkbox" type="checkbox"></td>
                                     <td th:text="${customerOrder.orderId}"></td>
-                                    <td th:text="${customerOrder.customer.lastname} + ' ' +${customerOrder.customer.firstname}"></td>
+                                    <td th:text="${customerOrder.customer.firstname} + ' ' +${customerOrder.customer.lastname}"></td>
                                     <td class="product_price totalprice" th:text="${customerOrder.totalprice}"></td>
                                     <td th:text="${#dates.format(customerOrder.orderDate, 'dd-MM-yyyy')}"></td>
                                     <td th:text="${customerOrder.status}"></td>
-                                    <td><a class="btn btn-sm btn-primary" href="#">Xem</a></td>
+                                    <td><a class="btn btn-sm btn-primary" th:href="@{'/dashboard/order/' + ${customerOrder.orderId}}">Xem</a></td>
                                 </tr>
                             </tbody>
                         </table>
