--- a/src/main/resources/templates/user/combo.html
+++ b/src/main/resources/templates/user/combo.html
@@ -422,7 +422,7 @@
     <!-- owl carousel plugin-->
     <script src="/plugins/owl.carousel.min.js"></script>
     <!-- main js -->
-    <script src="/js/combo1.js"></script>
+    <script src="/js/combo.js"></script>
     <script src="/js/jquery.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/addtocart-combo.js"></script>
