--- a/src/main/resources/templates/admin/order_details.html
+++ b/src/main/resources/templates/admin/order_details.html
@@ -44,11 +44,11 @@
                     <h3 class="text-primary">DeAdmin</h3>
                 </a>
                 <div class="navbar-nav w-100">
-                    <a href="/admin/index.html" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
-                    <a href="/admin/product.html" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
-                    <a href="/admin/add_product.html" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
-                    <a href="/admin/edit_product.html" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
-                    <a href="/admin/category.html" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
+                    <a href="/dashboard/" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
+                    <a href="/dashboard/product" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
+                    <a href="/dashboard/add_product" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
+                    <a href="/dashboard/edit_product" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
+                    <a href="/dashboard/category" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
                 </div>
             </nav>
         </div>
