--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -162,39 +162,42 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-12">
                     <div class="feature_slider owl-carousel owl-theme">
-                        <div class="single_feature_slider">
+
+                        <div class="single_feature_slider" th:each="product : ${products}"  th:if="${product.name == 'Combo Tết'}">
                             <div class="row">
                                 <div class="feature_text col-lg-3">
                                     <p>Premium Quality</p>
-                                    <h3>Latest foam Sofa</h3>
-                                    <a href="#" class="custom_btn btn_black">Xem ngay</i></a>
+                                    <h3 th:text="${product.name}">Latest foam Sofa</h3>
+                                    <a href="/combo" class="custom_btn btn_black">Xem ngay</i></a>
                                 </div>
                                 <div class="feature_img col-lg-9">
-                                    <img src="/images/combo/b1.jpg" alt="">
+                                    <img th:src="@{'data:image/png;base64,'+${product.image}}" alt="Product Image">
                                 </div>
                             </div>
                         </div>
-                        <div class="single_feature_slider">
+
+                        <div class="single_feature_slider" th:each="product : ${products}"  th:if="${product.name == 'Combo Giáng Sinh'}">
                             <div class="row">
                                 <div class="feature_text col-lg-3">
                                     <p>Premium Quality</p>
-                                    <h3>Latest foam Sofa</h3>
-                                    <a href="#" class="custom_btn btn_black">Xem ngay</i></a>
+                                    <h3 th:text="${product.name}">Latest foam Sofa</h3>
+                                    <a href="/combo" class="custom_btn btn_black">Xem ngay</i></a>
                                 </div>
                                 <div class="feature_img col-lg-9">
-                                    <img src="/images/combo/b1.jpg" alt="">
+                                    <img th:src="@{'data:image/png;base64,'+${product.image}}" alt="Product Image">
                                 </div>
                             </div>
                         </div>
-                        <div class="single_feature_slider">
+
+                        <div class="single_feature_slider" th:each="product : ${product}"  th:if="${product.name == 'Combo Vintage'}">
                             <div class="row">
                                 <div class="feature_text col-lg-3">
                                     <p>Premium Quality</p>
-                                    <h3>Latest foam Sofa</h3>
-                                    <a href="#" class="custom_btn btn_black">Xem ngay</i></a>
+                                    <h3 th:text="${product.name}">Latest foam Sofa</h3>
+                                    <a href="/combo" class="custom_btn btn_black">Xem ngay</i></a>
                                 </div>
                                 <div class="feature_img col-lg-9">
-                                    <img src="/images/combo/b1.jpg" alt="">
+                                    <img th:src="@{'data:image/png;base64,'+${product.image}}" alt="Product Image">
                                 </div>
                             </div>
                         </div>
@@ -221,82 +224,23 @@
                     <div class="product_list_slider owl-carousel owl-theme">
                         <div class="single_product_list_slider">
                             <div class="row align-items-center justify-content-between">
-                                <div class="col-lg-3 col-sm-6 col-6">
+                                <div class="col-lg-3 col-sm-6 col-6" th:each="product, productStat : ${products}"
+                                     th:if="${product.status.displayName == 'Nổi Bật' && productStat.index % 2 == 0}">
                                     <div class="single_product_item">
-                                        <a href="single-product.html">
-                                            <img src="/images/product/item.jpg">
-                                            <span class="product_tag">Nổi bật</span>
+                                        <a th:href="@{'/product/' + ${product.id}}">
+                                            <img th:src="@{'data:image/png;base64,'+${product.image}}" alt="Product Image">
+                                            <span class="product_tag" th:text="${product.status.displayName}"></span>
                                         </a>
-                                        
                                         <div class="single_product_text">
                                             <h5 class="product_category">
-                                                <a class="text-muted-1 category-link" data-category="tree">tree</a>
+                                                <a class="text-muted-1 category-link" href="#"  th:attr="data-category=${product.category.categoryName}"
+                                                   th:text="${product.category.categoryName}"></a>
                                             </h5>
-                                            <h4 class="product_title">
-                                                <a href="single-product.html">Product Name</a>
+                                            <h4 class="product_title" >
+                                                <a th:href="@{'/product/' + ${product.id}}" th:text="${product.name}"></a>
                                             </h4>
                                             <div class="product_price current_prefix">
-                                                100
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-6">
-                                    <div class="single_product_item">
-                                        <a href="single-product.html">
-                                            <img src="/images/product/item.jpg">
-                                            <span class="product_tag">Nổi bật</span>
-                                        </a>
-                                        
-                                        <div class="single_product_text">
-                                            <h5 class="product_category">
-                                                <a class="text-muted-1" href="#">Category</a>
-                                            </h5>
-                                            <h4 class="product_title">
-                                                <a href="single-product.html">Product Name</a>
-                                            </h4>
-                                            <div class="product_price current_prefix">
-                                                100
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-6">
-                                    <div class="single_product_item">
-                                        <a href="single-product.html">
-                                            <img src="/images/product/item.jpg">
-                                            <span class="product_tag">Nổi bật</span>
-                                        </a>
-                                        
-                                        <div class="single_product_text">
-                                            <h5 class="product_category">
-                                                <a class="text-muted-1" href="#">Category</a>
-                                            </h5>
-                                            <h4 class="product_title">
-                                                <a href="single-product.html">Product Name</a>
-                                            </h4>
-                                            <div class="product_price current_prefix">
-                                                100
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-6">
-                                    <div class="single_product_item">
-                                        <a href="single-product.html">
-                                            <img src="/images/product/item.jpg">
-                                            <span class="product_tag">Nổi bật</span>
-                                        </a>
-                                        
-                                        <div class="single_product_text">
-                                            <h5 class="product_category">
-                                                <a class="text-muted-1" href="#">Category</a>
-                                            </h5>
-                                            <h4 class="product_title">
-                                                <a href="single-product.html">Product Name</a>
-                                            </h4>
-                                            <div class="product_price current_prefix">
-                                                100
+                                                <a th:text="${product.price}"></a>
                                             </div>
                                         </div>
                                     </div>
@@ -305,88 +249,30 @@
                         </div>
                         <div class="single_product_list_slider">
                             <div class="row align-items-center justify-content-between">
-                                <div class="col-lg-3 col-sm-6 col-6">
+                                <div class="col-lg-3 col-sm-6 col-6" th:each="product, productStat : ${products}"
+                                     th:if="${product.status.displayName == 'Nổi Bật' && productStat.index % 2 == 0}">
                                     <div class="single_product_item">
-                                        <a href="single-product.html">
-                                            <img src="/images/product/item.jpg">
-                                            <span class="product_tag">Nổi bật</span>
+                                        <a th:href="@{'/product/' + ${product.id}}">
+                                            <img th:src="@{'data:image/png;base64,'+${product.image}}" alt="Product Image">
+                                            <span class="product_tag" th:text="${product.status.displayName}"></span>
                                         </a>
-                                        
                                         <div class="single_product_text">
                                             <h5 class="product_category">
-                                                <a class="text-muted-1" href="#">Category</a>
+                                                <a class="text-muted-1 category-link" href="#"  th:attr="data-category=${product.category.categoryName}"
+                                                   th:text="${product.category.categoryName}"></a>
                                             </h5>
-                                            <h4 class="product_title">
-                                                <a href="single-product.html">Product Name</a>
+                                            <h4 class="product_title" >
+                                                <a th:href="@{'/product/' + ${product.id}}" th:text="${product.name}"></a>
                                             </h4>
                                             <div class="product_price current_prefix">
-                                                100
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-6">
-                                    <div class="single_product_item">
-                                        <a href="single-product.html">
-                                            <img src="/images/product/item.jpg">
-                                            <span class="product_tag">Nổi bật</span>
-                                        </a>
-                                        
-                                        <div class="single_product_text">
-                                            <h5 class="product_category">
-                                                <a class="text-muted-1" href="#">Category</a>
-                                            </h5>
-                                            <h4 class="product_title">
-                                                <a href="single-product.html">Product Name</a>
-                                            </h4>
-                                            <div class="product_price current_prefix">
-                                                100
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-6">
-                                    <div class="single_product_item">
-                                        <a href="single-product.html">
-                                            <img src="/images/product/item.jpg">
-                                            <span class="product_tag">Nổi bật</span>
-                                        </a>
-                                        
-                                        <div class="single_product_text">
-                                            <h5 class="product_category">
-                                                <a class="text-muted-1" href="#">Category</a>
-                                            </h5>
-                                            <h4 class="product_title">
-                                                <a href="/single-product">Product Name</a>
-                                            </h4>
-                                            <div class="product_price current_prefix">
-                                                100
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-6">
-                                    <div class="single_product_item">
-                                        <a href="/product">
-                                            <img src="/images/product/item.jpg">
-                                            <span class="product_tag">Nổi bật</span>
-                                        </a>
-                                        
-                                        <div class="single_product_text">
-                                            <h5 class="product_category">
-                                                <a class="text-muted-1" href="#">Category</a>
-                                            </h5>
-                                            <h4 class="product_title">
-                                                <a href="/single-product">Product Name</a>
-                                            </h4>
-                                            <div class="product_price current_prefix">
-                                                100
+                                                <a th:text="${product.price}"></a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
