--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -83,7 +83,7 @@
                 <div class="row g-4">
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-line fa-3x text-primary"></i>
+                            <i class="fas fa-dollar-sign fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Doanh thu hôm nay</p>
                                 <h6 class="mb-0 totalprice" th:text="${totalSaleaday}"></h6>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-bar fa-3x text-primary"></i>
+                            <i class="fas fa-hand-holding-usd fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Tổng doanh thu</p>
                                 <h6 class="mb-0 totalprice" th:text="${totalSale}"></h6>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-bar fa-3x text-primary"></i>
+                            <i class="fas fa-tag fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Đơn hàng hôm nay</p>
                                 <h6 class="mb-0 totalprice"></h6>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="col-sm-6 col-xl-3">
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
-                            <i class="fa fa-chart-bar fa-3x text-primary"></i>
+                            <i class="fas fa-tags fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Tổng đơn hàng</p>
                                 <h6 class="mb-0 totalprice"></h6>
